--- a/notebooks/image-classifier.ipynb
+++ b/notebooks/image-classifier.ipynb
@@ -80,7 +80,7 @@
     "    # Add new subplot\n",
     "    plt.subplot(2, int(batch_size/2), i + 1)\n",
     "    # Plot the image\n",
-    "    img = images[i]\n",
+    "    img = images[i] # change\n",
     "    img = img / 2 + 0.5\n",
     "    npimg = img.numpy()\n",
     "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
